--- a/css/icomoon.css
+++ b/css/icomoon.css
@@ -186,7 +186,7 @@
 .icon-scissors:before {
     content: "\e035";
 }
-.icon-paintbrush:before {
+.icon-sports-club:before:before {
     content: "\e036";
 }
 .icon-magnifying-glass:before {
